--- a/Android-Cookbook/Fragment/app/src/main/AndroidManifest.xml
+++ b/Android-Cookbook/Fragment/app/src/main/AndroidManifest.xml
@@ -1,30 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.hejin.helloworld">
-
-    <uses-permission android:name="android.permission.INTERNET" />
+    package="org.hejin.fragment">
 
     <application
-        android:name=".AndroidApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".BackgroundServiceActivity"></activity>
-        <activity
-            android:name=".SplashScreen"
-            android:noHistory="true">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"></activity>
-        <activity android:name=".SubActivity"></activity>
-        <service android:name=".TrackService" android:enabled="true"/>
     </application>
 
 </manifest>
